# ssvm-nodejs-starter

./: Cargo.toml
node/: app.js  package.json  rand_time_data.json
src/: lib.rs
